// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCtActions Should create correct ct actions from request and mollies payment for order lines (mollie response is true) 1`] = `
{
  "action": "changeTransactionState",
  "state": "Success",
  "transactionId": "869ea4f0-b9f6-4006-bf04-d8306b5c9564",
}
`;

exports[`createCtActions Should create correct ct actions from request and mollies payment for order lines (mollie response is true) 2`] = `
{
  "action": "changeTransactionTimestamp",
  "timestamp": "2021-10-08T12:12:02.625Z",
  "transactionId": "869ea4f0-b9f6-4006-bf04-d8306b5c9564",
}
`;

exports[`createCtActions Should create correct ct actions from request and mollies payment for order lines (mollie response is true) 3`] = `
{
  "action": "changeTransactionInteractionId",
  "interactionId": "3fea7470-5434-4056-a829-a187339e94d8",
  "transactionId": "869ea4f0-b9f6-4006-bf04-d8306b5c9564",
}
`;

exports[`createCtActions Should create correct ct actions from request and mollies payment for order lines (mollie response is true) 4`] = `
{
  "action": "addInterfaceInteraction",
  "fields": {
    "actionType": "cancelOrder",
    "createdAt": "2021-10-08T12:12:02.625Z",
    "id": "3fea7470-5434-4056-a829-a187339e94d8",
    "request": "{"transactionId":"869ea4f0-b9f6-4006-bf04-d8306b5c9564","cancelOrder":{"lineIds":"3e632c95-8dc6-459a-9edc-5e64760abf21,  31fb05cd-6e00-42b4-a25d-68cceef5a603","includeShipping":true}}",
    "response": "Ok",
  },
  "type": {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;

exports[`createCtActions Should create correct ct actions from request and mollies payment for whole cancel order (mollie response is object) 1`] = `
{
  "action": "changeTransactionState",
  "state": "Success",
  "transactionId": "869ea4f0-b9f6-4006-bf04-d8306b5c9564",
}
`;

exports[`createCtActions Should create correct ct actions from request and mollies payment for whole cancel order (mollie response is object) 2`] = `
{
  "action": "changeTransactionTimestamp",
  "timestamp": "2021-10-08T12:12:02.625Z",
  "transactionId": "869ea4f0-b9f6-4006-bf04-d8306b5c9564",
}
`;

exports[`createCtActions Should create correct ct actions from request and mollies payment for whole cancel order (mollie response is object) 3`] = `
{
  "action": "changeTransactionInteractionId",
  "interactionId": "3fea7470-5434-4056-a829-a187339e94d8",
  "transactionId": "869ea4f0-b9f6-4006-bf04-d8306b5c9564",
}
`;

exports[`createCtActions Should create correct ct actions from request and mollies payment for whole cancel order (mollie response is object) 4`] = `
{
  "action": "addInterfaceInteraction",
  "fields": {
    "actionType": "cancelOrder",
    "createdAt": "2021-10-08T12:12:02.625Z",
    "id": "3fea7470-5434-4056-a829-a187339e94d8",
    "request": "{"transactionId":"869ea4f0-b9f6-4006-bf04-d8306b5c9564","cancelOrder":{}}",
    "response": "{"lineIds":"42c6d1fd-b942-433b-b6dd-41062c4b3a42"}",
  },
  "type": {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;
